<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/steward_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.example.bozhitong.MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@drawable/title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#dfdedd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/Property_introduction_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:drawableTop="@drawable/property"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/Property_introduction"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="#dfdedd" />

                <TextView
                    android:id="@+id/OnlineService_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:drawableTop="@drawable/online_service"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="呼叫管家"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="#dfdedd" />

                <TextView
                    android:id="@+id/ExpressWarr_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/quick_repair"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/Quick_repair"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#dfdedd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/Residential_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:drawableTop="@drawable/residential_bulletin"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/Residential_Bulletin"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="#dfdedd" />

                <TextView
                    android:id="@+id/ProperPayment_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:drawableTop="@drawable/property_payment"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/Property_payment"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="#dfdedd" />

                <TextView
                    android:id="@+id/suggestions_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/suggestions"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/Complaints_suggestions"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#dfdedd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/comityResea_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:drawableTop="@drawable/research"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/Community_research"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="#dfdedd" />

                <TextView
                    android:id="@+id/ServiceGuide_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:drawableTop="@drawable/service_guide"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/Service_guide"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="#dfdedd" />

                <TextView
                    android:id="@+id/Common_query"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/common_query"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/Common_query"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#dfdedd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/HomeReon_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:drawableTop="@drawable/home_reservation"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/Home_reservation"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="#dfdedd" />

                <TextView
                    android:id="@+id/housing_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:drawableTop="@drawable/house_rent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/Housing_rental"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="#dfdedd" />

                <TextView
                    android:id="@+id/mail_service"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/steward_express"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="快递服务"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#dfdedd" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>