<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gainsboro"
    android:orientation="vertical" >

    <!-- 页面标题 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#8cac34"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/housing_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/left_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/House_rent"
            android:textColor="#ffffff"
            android:textSize="20sp" >
        </TextView>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gainsboro" />
    <!-- 滚动区域部分 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <!--<TextView-->
            <!--android:layout_width="60dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:layout_margin="10dp"-->
            <!--android:gravity="center"-->
            <!--android:background="@drawable/btn_zc_cd"-->
            <!--android:text="@string/Rental"-->
            <!--android:textColor="#ffffff" />-->

        <!--<TextView-->
            <!--android:layout_width="60dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:layout_margin="10dp"-->
            <!--android:gravity="center"-->
            <!--android:background="@drawable/btn_zc_bg"-->
            <!--android:text="@string/Sell"-->
            <!--android:textColor="#ffffff" />-->

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:text="@string/Rental"
                android:gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/btn_zc_cd"
                android:textColor="@drawable/rb_text_bg"
                android:button="@null"
                />

            <RadioButton
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:text="@string/Sell"
                android:background="@drawable/btn_zc_cd"
                android:textColor="@drawable/rb_text_bg"
                android:gravity="center"
                android:layout_margin="10dp"
                android:button="@null"
                />


        </RadioGroup>



        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/RHousingRental_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_zc_bg"
            android:text="发布"
            android:textColor="#ffffff" />
    </LinearLayout>

    <com.example.bozhitong.dialog.view.AutoListView
        android:id="@+id/lstv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >
    </com.example.bozhitong.dialog.view.AutoListView>

</LinearLayout>